# dense_graph_partition

./: .gitignore  README.md  pyproject.toml
data/tiny/: cycle4.json  k4.json  path4.json  two_triangles_bridge.json
scripts/: experiment1_baseline.py  experiment2_local_search.py  generate_synthetic_instances.py
src/dense_graph_partition/: config.py
src/dense_graph_partition/adapters/: kapoce.py  leiden.py
src/dense_graph_partition/algorithms/: basic.py  matching.py
src/dense_graph_partition/core/: evaluation.py  graph_io.py  types.py
src/dense_graph_partition/experiments/: algorithm_registry.py  datasets.py  local_search_runner.py  runner.py
src/dense_graph_partition/local_search/: merge.py  move.py  peel.py  pipeline.py  result.py  search.py  split.py  state.py
tests/: test_evaluation.py  test_graph_io.py  test_kapoce.py  test_leiden.py  test_matching.py
