[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdgp"
version = "0.1.0"
description = "Heuristics and experiments for Dense Graph Partitioning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx",
    "pandas",
    "leidenalg",
    "igraph",
    "numpy",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
